# mcparr

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/adr/: 0001-initial-architecture.md
docs/field-reports/: mcparr-zero-to-deployed.md
src/mcparr/: __init__.py  __main__.py  config.py  server.py
src/mcparr/clients/: __init__.py  bazarr.py  prowlarr.py  radarr.py  sonarr.py
src/mcparr/tools/: bazarr.py  prowlarr.py  radarr.py  sabnzbd.py  sonarr.py
src/servarr/: __main__.py  config.py  server.py
src/servarr/clients/: __init__.py  base.py  bazarr.py  prowlarr.py  radarr.py  sabnzbd.py  sonarr.py
src/servarr/tools/: __init__.py  prowlarr.py  radarr.py  sabnzbd.py  sonarr.py
