[project]
name = "servarr"
version = "0.1.0"
description = "Unified MCP server for the *arr media automation stack"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Cameron Sjo", email = "cameronsjo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
servarr = "servarr.__main__:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
